solved some Alignment problem.

--- a/src/css/css-responsive.css
+++ b/src/css/css-responsive.css
@@ -176,6 +176,15 @@
       }
     }
   }
+  .about_section_3 {
+    & .box-container {
+      & .box {
+        ul {
+          padding: 2rem 1rem 2rem 3rem;
+        }
+      }
+    }
+  }
 }
 
 @media screen and (width < 461px) {
